fixed rounded avatars on safari

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,13 +26,19 @@ a.iconic {
     color: #888;
 }
 
-img.avatar {
+figure.avatar {
     border-radius: 50%;
     border: 3px solid white;
     box-shadow: 0 1px 2px rgba(0,0,0,0.4);
     width: 50px;
     height: 50px;
-}
+
+    img {
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+    }
+}   
 
 p.error {
     color: #b94a48;
@@ -354,7 +360,7 @@ div.source {
         font-size: 11px;
         margin-right: 5px;
 
-        img.avatar {
+        figure.avatar {
             display: block;
             margin: 0 auto 5px auto;
         }
@@ -590,7 +596,7 @@ li.comment {
         font-size: 11px;
         margin-right: 5px;
 
-        img.avatar {
+        figure.avatar {
             display: block;
             margin: 0 auto 5px auto;
         }
