--- a/app/assets/stylesheets/language.css.scss
+++ b/app/assets/stylesheets/language.css.scss
@@ -22,7 +22,7 @@
                 text-align: center;
                 font-size: 12px;
 
-                img.avatar {
+                figure.avatar {
                     display: block;
                     margin: 0 auto 2px auto;
                 }
