--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -23,7 +23,7 @@
             text-align: center;
             font-size: 12px;
 
-            img.avatar {
+            figure.avatar {
                 display: block;
                 margin: 0 auto 5px auto;
             }
