--- a/app/assets/stylesheets/source.css.scss
+++ b/app/assets/stylesheets/source.css.scss
@@ -34,7 +34,7 @@ div.medium-column {
             text-align: center;
             font-size: 12px;
 
-            img.avatar {
+            figure.avatar {
                 display: block;
                 margin: 0 auto 5px auto;
             }
